docroot/sites/all/themes/chm_theme_kit/less/content.less
/* global styles*/
.main-container {
  padding-top: 40px;
  padding-bottom: 40px;
}

#page-title {
  margin-top: 0;
}
.views-exposed-form .views-exposed-widget .form-submit:hover,
.views-exposed-form .views-exposed-widget .form-submit:active,
.views-exposed-form .views-exposed-widget .form-submit:focus,
.views-exposed-form .views-exposed-widget .form-submit[disabled]:hover,
.views-exposed-form .views-exposed-widget .form-submit[disabled]:active,
.views-exposed-form .views-exposed-widget .form-submit[disabled]:focus{
  background-color: @text-color-green;
}

/* front page styling*/
.view-latest-updates {
  ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
    
    .views-field.views-field-field-image .field-content{
      float:left;
      margin-right: 20px; 
    }
    
    .views-field.views-field-title-field{
      font-size: 20px;
    }
    .views-field.views-field-field-dates{
      font-size: 12px;
      color: #999;
    }
    .views-field.views-field-body{
      clear: both;
      margin-bottom: 1em;
    }
  }
}
.pane-ptk-base-chm-content-statistics{
  table>tbody>tr>td:nth-child(2){
    position: relative;
    span.fa{
      position: absolute;
      right: 100%;
      top: 50%;
      transform: translateY(-50%);
    }
  }
}
/* Species listing */
#block-views-species-block-1 {
  .content {
    margin-top: 0;
    form {
      #edit-submit-species {
        padding-top: 7px;
        padding-bottom: 7px;
      }
    }
    .views-table {
      margin-bottom: 0;
      thead {
        th {
          padding: 0;
          a {
            padding: 8px;
            display: block;
            width: 100%;
            color: #333333;
          }
          img {
            display: inline-block;
            margin-top: -3px;
            margin-left: 5px;
          }
        }
      }
    }
  }
}



/* Species details page */
body.node-type-species {
  //.panels-flexible-column.well-sm {
  //  padding: 9px;
  //}
  //.panels-flexible-column-inside {
  //  padding-left: 0;
  //  .panels-flexible-region-1-sidebar {
  //    padding: 0;
  //    width: 100%;
  //  }
  //}
}


/* Event detail page */
.node-event-detail {

  .field {
    margin-bottom: 10px;
  }
  .field-name-field-dates {
    color: #039749;
    font-size: 1.2em;
    text-align: center;
    > div {
      display: inline;
      float: none;
    }
  }

  .field-name-field-event-address {
    color: #039749;
    font-size: 1.2em;
    text-align: center;
    .field-item {
      div, span {
        display: inline;
        float: none;
      }
      > div:after, > span:after {
        content: ", ";
      }
      > div:last-child:after, > span:last-child:after {
        content: "";
      }
    }
  }

  .field-name-field-event-status, .field-name-field-event-type, .field-name-field-url {
    > div {
      float: none;
      text-align: center;
    }
  }
}

